updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am new to the coding world, but I'm excited to see where it will lead me.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>San Antonio, TX</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Film photography, outdoor activites, and travel.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Food critic.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Carrollton, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be apart of the future, and devlop software that aids in the tommorrow.</p>
     </section>
 
     <footer id="footer">
